--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "test for the GBC company",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gabriel",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.2",
+    "path": "^0.12.7",
+    "sentry": "^0.1.2"
+  }
 }
