--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
-    "sentry": "^0.1.2"
+    "sentry": "^0.1.2",
+    "sequelize": "^5.21.5",
+    "yup": "^0.28.1"
   }
 }
