--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "sentry": "^0.1.2",
     "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1",
     "yup": "^0.28.1"
   }
 }
